--- a/client/css/base.css
+++ b/client/css/base.css
@@ -5,3 +5,10 @@ body {
 .spacer {
     height: 30px;
 }
+
+
+.clickable:hover {
+    cursor: pointer;
+    color: #ffffff;
+    background-color: #001100
+}
