--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -3,31 +3,35 @@
     <div class="page-header">
         <h1>Your Dream House</h1>
     </div>
-    <div ng-show="done">{{message}}</div>
-    <div class="row">
-        <div class="col-sm-12 col-md-9">
+    <div ng-show="done" class="row">
+        <div class="col-sm-12 col-md-12">
+            {{message}}
             <hr>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-3">
-          
-            <button class="btn btn-secondary btn-lg" ng-click="getData()" ng-hide="currentQuestion">Get Questions</button>
+
+            <button class="btn btn-secondary btn-lg" ng-click="getData()" ng-hide="currentQuestion">Start Quiz!</button>
         </div>
     </div>
-    <div class="spacer"></div>
     <div class="row">
         <div class="col-sm-12 col-md-6" ng-hide="!currentQuestion">
-            <div class= "panel panel-default">
-                <div class= "panel-heading" >{{ currentQuestion.question }}</div>
-                <div class= "panel-body">
-                    <ul class= "list-group">
-                        <li class= "clickable list-group-item" ng-repeat="answer in currentQuestion.answers" 
-                        ng-click= "answerQuestion(answer.value)">
-                        {{ answer.value }}</li>
+            <div class="panel panel-default">
+                <div class="panel-heading">{{ currentQuestion.question }}</div>
+                <div class="panel-body">
+                    <ul class="list-group">
+                        <li class="clickable list-group-item" ng-repeat="answer in currentQuestion.answers" ng-click="answerQuestion(answer.id)">
+                            {{ answer.value }}</li>
                 </div>
             </div>
         </div>
-    <img ng-src="/img/{{img}}.jpg" alt="Description" ng-hide="!done" />
+    </div>
+    
+    <div ng-hide="!done">
+        <div class="spacer"></div>
+        <img ng-src="/img/{{img}}.jpg" alt="Description" />
+    </div>
+        
 </div>
