--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -22,7 +22,7 @@
                 <div class="panel-heading">{{ currentQuestion.question }}</div>
                 <div class="panel-body">
                     <ul class="list-group">
-                        <li class="clickable list-group-item" ng-repeat="answer in currentQuestion.answers" ng-click="answerQuestion(answer.id)">
+                        <li class="clickable list-group-item" ng-class="answer.className" ng-repeat="answer in currentQuestion.answers" ng-click="answerQuestion(answer.id)">
                             {{ answer.value }}</li>
                 </div>
             </div>
